# MicroBIM

./: .gitignore  CMakeLists.txt  README.md
Application/: CMakeLists.txt  main.cpp
ConsoleDrawer/: Box.cpp  Box.h  CMakeLists.txt  Circle.cpp  Circle.h  ConsoleCanvas.cpp  ConsoleCanvas.h  DataStructures.h  Line.cpp  Line.h  Shape.h
Engine/: Box.cpp  Box.h  CMakeLists.txt  Shape.h
HouseBuilder/: Builder.cpp  Builder.h  CMakeLists.txt  Door.cpp  Door.h  House.cpp  House.h  UserInputHandler.cpp  UserInputHandler.h  UserInterfaceRenderer.cpp  UserInterfaceRenderer.h  Window.cpp  Window.h  main.cpp
UserSide/: CMakeLists.txt  main.cpp
